[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[dependencies.farm-with-locked-rewards]
path = ".."

[dependencies.common_structs]
path = "../../../common/common_structs"

[dependencies.pausable]
path = "../../../common/modules/pausable"

[dependencies.weekly-rewards-splitting]
path = "../../../energy-integration/common-modules/weekly-rewards-splitting"

[dependencies.energy-factory]
path = "../../../locked-asset/energy-factory"

[dependencies.farm-boosted-yields]
path = "../../../energy-integration/farm-boosted-yields"

[dependencies.multiversx-sc-snippets]
version = "0.50.5"

[dependencies.multiversx-sc]
version = "0.50.5"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.40.0", features = ["full"] }


# [workspace]

